# learning-dojo

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-review.yml
devto-mcp/: CLAUDE.md  pyproject.toml
devto-mcp/src/devto_mcp/: article.py  server.py
devto-mcp/tests/: test_article.py
medium-mcp/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
medium-mcp/src/medium_mcp/: __init__.py  article.py  browser.py  server.py  setup_auth.py
medium-mcp/tests/: test_article.py
